lib/bait/tests/inout/return.out
lib/bait/tests/inout/return.in.bt:2:7 error: expected return value of type i32
