lib/bait/tests/inout/return.in.bt
fun value_missing() i32 {
	return
}
